Fix fullscreen layout on iOS

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -2,6 +2,8 @@ html,
 body {
     height: 100%;
     width: 100%;
+    padding: 0;
+    margin: 0;
 }
 
 body {
@@ -9,4 +11,5 @@ body {
     font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     color: #333;
     -webkit-font-smoothing: antialiased;
+    overflow-x: hidden;
 }
